src/parser.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = peg$FAILED,
        peg$c1 = function(x) { return x },
        peg$c2 = void 0,
        peg$c3 = function(indent, leader) {
        	return new LineItem(LINE_END, indent, leader, null)
        },
        peg$c4 = function(indent, leader, it) {
        	if(it[it.length - 1] instanceof Reference && it[it.length - 1].name === leader){
        		return new LineItem(LINE_START, indent, leader, it.slice(0, -1))
        	} else {
        		return new LineItem(LINE_NORMAL, indent, leader, it)
        	}
        },
        peg$c5 = ":",
        peg$c6 = { type: "literal", value: ":", description: "\":\"" },
        peg$c7 = [],
        peg$c8 = /^[^\r\n]/,
        peg$c9 = { type: "class", value: "[^\\r\\n]", description: "[^\\r\\n]" },
        peg$c10 = function(indent, leader, it, tail) {
        	return new LineItem(LINE_NORMAL, indent, leader, it.concat([tail[2]]))
        },
        peg$c11 = function(h, b, t) {
        	h.body.push(b.join(''));
        	return h;
        },
        peg$c12 = function(indent, leader, it) {return (it[it.length - 1] instanceof Reference && it[it.length - 1].name === leader)},
        peg$c13 = function(indent, leader, it) {
        		storedVerbatimTerminator = leader;
        		return new LineItem(LINE_NORMAL, leader, it);
        	},
        peg$c14 = function(body) {return body !== storedVerbatimTerminator},
        peg$c15 = function(body) { return body + "\n" },
        peg$c16 = function(trailer) { return trailer == storedVerbatimTerminator },
        peg$c17 = "-",
        peg$c18 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c19 = "*",
        peg$c20 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c21 = function(indent, leader, body) {
        	return new LineItem(LINE_NORMAL, indent, leader, body)
        },
        peg$c22 = "{",
        peg$c23 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c24 = "}",
        peg$c25 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c26 = function(inside) {
        		return inside
        	},
        peg$c27 = /^[*+\-#=]/,
        peg$c28 = { type: "class", value: "[*+\\-#=]", description: "[*+\\-#=]" },
        peg$c29 = function(content) { return formLine(content) },
        peg$c30 = function(it) { return [new Reference('.verbatim'), it] },
        peg$c31 = function(it) { return [new Reference('.codespan'), it] },
        peg$c32 = "\\",
        peg$c33 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c34 = /^[+#\-=`*:[\]{}\\]/,
        peg$c35 = { type: "class", value: "[+#\\-=`*:[\\]{}\\\\]", description: "[+#\\-=`*:[\\]{}\\\\]" },
        peg$c36 = function(special) { return [new Reference('.lit'), special]},
        peg$c37 = function(normal) { return [new Reference('.lit'), '\\' + normal] },
        peg$c38 = { type: "other", description: "Text" },
        peg$c39 = /^[^\r\n[{\\}\]*`]/,
        peg$c40 = { type: "class", value: "[^\\r\\n[{\\\\}\\]*`]", description: "[^\\r\\n[{\\\\}\\]*`]" },
        peg$c41 = function(t) { return [new Reference('.lit'), t] },
        peg$c42 = "**",
        peg$c43 = { type: "literal", value: "**", description: "\"**\"" },
        peg$c44 = function(inner) { return [new Reference('.inline**'), formLine(inner)] },
        peg$c45 = function(inner) { return [new Reference('.inline*'), formLine(inner)] },
        peg$c46 = null,
        peg$c47 = function(head, rear, tail) {
        		var res = [head]
        		for(var j = 0; j < rear.length; j++){
        			res.push(rear[j][1])
        		};
        		if(tail){
        			res.push(tail[2]);
        		}
        		return res;
        	},
        peg$c48 = function(head, rear) {
        	var res = [head]
        	for(var j = 0; j < rear.length; j++){
        		res.push(rear[j][1])
        	};
        	return res;
        },
        peg$c49 = "[",
        peg$c50 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c51 = "]",
        peg$c52 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c53 = function(begins, inside, ends) {
        		var call = inside.slice(0);
        		Object.defineProperty(call, 'begins', {
        			value: begins,
        			enumerable: false
        		});
        		Object.defineProperty(call, 'ends', {
        			value: ends,
        			enumerable: false
        		});
        		return call
        	},
        peg$c54 = "'",
        peg$c55 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c56 = function(it) { return [new Reference('quote'), it] },
        peg$c57 = ".",
        peg$c58 = { type: "literal", value: ".", description: "\".\"" },
        peg$c59 = function(head, rear) {
        		var form = head;
        		if(rear) for(var j = 0; j < rear.length; j++){
        			form = ['.', form, rear[j][1].name]
        		}
        		return form;
        	},
        peg$c60 = { type: "other", description: "String Literal" },
        peg$c61 = "\"",
        peg$c62 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c63 = function(inner) { return inner.join('') },
        peg$c64 = /^[^"\\\r\n]/,
        peg$c65 = { type: "class", value: "[^\"\\\\\\r\\n]", description: "[^\"\\\\\\r\\n]" },
        peg$c66 = "\\u",
        peg$c67 = { type: "literal", value: "\\u", description: "\"\\\\u\"" },
        peg$c68 = /^[a-fA-F0-9]/,
        peg$c69 = { type: "class", value: "[a-fA-F0-9]", description: "[a-fA-F0-9]" },
        peg$c70 = function(digits) { 
        		return String.fromCharCode(parseInt(digits.join(''), 16))
        	},
        peg$c71 = /^[^u\r\n]/,
        peg$c72 = { type: "class", value: "[^u\\r\\n]", description: "[^u\\r\\n]" },
        peg$c73 = function(which) {
        		switch(which) {
        			case('n'): return "\n"
        			case('r'): return "\r"
        			case('"'): return "\""
        			case('t'): return "\t"
        			case('v'): return "\v"
        			default: return "\\" + which
        		}
        	},
        peg$c74 = function() { return '' },
        peg$c75 = { type: "other", description: "Code Span" },
        peg$c76 = "`",
        peg$c77 = { type: "literal", value: "`", description: "\"`\"" },
        peg$c78 = /^[^`]/,
        peg$c79 = { type: "class", value: "[^`]", description: "[^`]" },
        peg$c80 = function(val) { return val },
        peg$c81 = function(terminator) { storedVerbatimTerminator = terminator; return true },
        peg$c82 = function(terminator, inner) { return inner },
        peg$c83 = function(term) { term === storedVerbatimTerminator },
        peg$c84 = function(term) { return },
        peg$c85 = { type: "other", description: "Verbatim Segment" },
        peg$c86 = "{:",
        peg$c87 = { type: "literal", value: "{:", description: "\"{:\"" },
        peg$c88 = /^[^:]/,
        peg$c89 = { type: "class", value: "[^:]", description: "[^:]" },
        peg$c90 = /^[^:}]/,
        peg$c91 = { type: "class", value: "[^:}]", description: "[^:}]" },
        peg$c92 = ":}",
        peg$c93 = { type: "literal", value: ":}", description: "\":}\"" },
        peg$c94 = function(content) { return content },
        peg$c95 = function(terminator) { 
        		return terminator === storedVerbatimTerminator
        	},
        peg$c96 = function(terminator) { return },
        peg$c97 = "=",
        peg$c98 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c99 = function(equals) { return equals },
        peg$c100 = { type: "other", description: "Numeric Literal" },
        peg$c101 = function(positive) { return -positive },
        peg$c102 = "0x",
        peg$c103 = { type: "literal", value: "0x", description: "\"0x\"" },
        peg$c104 = "0X",
        peg$c105 = { type: "literal", value: "0X", description: "\"0X\"" },
        peg$c106 = /^[0-9a-fA-F]/,
        peg$c107 = { type: "class", value: "[0-9a-fA-F]", description: "[0-9a-fA-F]" },
        peg$c108 = function(hexdigits) { return parseInt(hexdigits, 16) },
        peg$c109 = /^[0-9]/,
        peg$c110 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c111 = /^[eE]/,
        peg$c112 = { type: "class", value: "[eE]", description: "[eE]" },
        peg$c113 = /^[+\-]/,
        peg$c114 = { type: "class", value: "[+\\-]", description: "[+\\-]" },
        peg$c115 = function(decimal) { return decimal - 0 },
        peg$c116 = { type: "other", description: "Identifier" },
        peg$c117 = /^[a-zA-Z\-_\/+*<=>!?$%_&~\^@#]/,
        peg$c118 = { type: "class", value: "[a-zA-Z\\-_\\/+*<=>!?$%_&~\\^@#]", description: "[a-zA-Z\\-_\\/+*<=>!?$%_&~\\^@#]" },
        peg$c119 = /^[a-zA-Z0-9\-_\/+*<=>!?$%_&~\^@#]/,
        peg$c120 = { type: "class", value: "[a-zA-Z0-9\\-_\\/+*<=>!?$%_&~\\^@#]", description: "[a-zA-Z0-9\\-_\\/+*<=>!?$%_&~\\^@#]" },
        peg$c121 = function(begins, it, ends) {
        		var ref = new Reference(it);
        		Object.defineProperty(ref, 'begins', {
        			value: begins,
        			enumerable: false
        		});
        		Object.defineProperty(ref, 'ends', {
        			value: ends,
        			enumerable: false
        		});
        		return ref;
        	},
        peg$c122 = "+",
        peg$c123 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c124 = /^[ \t]/,
        peg$c125 = { type: "class", value: "[ \\t]", description: "[ \\t]" },
        peg$c126 = { type: "other", description: "Line Break" },
        peg$c127 = "\r",
        peg$c128 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c129 = "\n",
        peg$c130 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c131 = { type: "other", description: "Space Character or Newline" },
        peg$c132 = /^[\t\x0B\f \xA0\u1680\u180E\u2000\u2001\u2002\u2003\u2004\u2005\u2006\u2007\u2008\u2009\u200A\u202F\u205F\u3000\uFEFF\r\n]/,
        peg$c133 = { type: "class", value: "[\\t\\x0B\\f \\xA0\\u1680\\u180E\\u2000\\u2001\\u2002\\u2003\\u2004\\u2005\\u2006\\u2007\\u2008\\u2009\\u200A\\u202F\\u205F\\u3000\\uFEFF\\r\\n]", description: "[\\t\\x0B\\f \\xA0\\u1680\\u180E\\u2000\\u2001\\u2002\\u2003\\u2004\\u2005\\u2006\\u2007\\u2008\\u2009\\u200A\\u202F\\u205F\\u3000\\uFEFF\\r\\n]" },
        peg$c134 = { type: "other", description: "Comment" },
        peg$c135 = ";",
        peg$c136 = { type: "literal", value: ";", description: "\";\"" },
        peg$c137 = { type: "other", description: "Space without Newline" },
        peg$c138 = { type: "other", description: "Space Character" },
        peg$c139 = /^[\t\x0B\f \xA0\u1680\u180E\u2000\u2001\u2002\u2003\u2004\u2005\u2006\u2007\u2008\u2009\u200A\u202F\u205F\u3000\uFEFF]/,
        peg$c140 = { type: "class", value: "[\\t\\x0B\\f \\xA0\\u1680\\u180E\\u2000\\u2001\\u2002\\u2003\\u2004\\u2005\\u2006\\u2007\\u2008\\u2009\\u200A\\u202F\\u205F\\u3000\\uFEFF]", description: "[\\t\\x0B\\f \\xA0\\u1680\\u180E\\u2000\\u2001\\u2002\\u2003\\u2004\\u2005\\u2006\\u2007\\u2008\\u2009\\u200A\\u202F\\u205F\\u3000\\uFEFF]" },
        peg$c141 = "",
        peg$c142 = function() { return new Position(offset()) },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parselinearElements();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseNEWLINE();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c1(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parselinearElements() {
      var s0;

      s0 = peg$parseverbatimBlock();
      if (s0 === peg$FAILED) {
        s0 = peg$parseverbatimLineInvoke();
        if (s0 === peg$FAILED) {
          s0 = peg$parseblockEnd();
          if (s0 === peg$FAILED) {
            s0 = peg$parseblockStart();
            if (s0 === peg$FAILED) {
              s0 = peg$parselistItem();
              if (s0 === peg$FAILED) {
                s0 = peg$parseline();
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseblockEnd() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parseindentation();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsenormalLeader();
        if (s2 !== peg$FAILED) {
          s3 = peg$currPos;
          peg$silentFails++;
          s4 = peg$parseNEWLINE();
          peg$silentFails--;
          if (s4 !== peg$FAILED) {
            peg$currPos = s3;
            s3 = peg$c2;
          } else {
            s3 = peg$c0;
          }
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c3(s1, s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseblockStart() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parseindentation();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsenormalLeader();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseOPTIONAL_LINE_CALL_SPACES();
          if (s3 !== peg$FAILED) {
            s4 = peg$parselinecallItems();
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c4(s1, s2, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseverbatimLineInvoke() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;
